Update TIP-18 to include limited addresses

--- a/tips/TIP-0018/tip-0018.md
+++ b/tips/TIP-0018/tip-0018.md
@@ -86,6 +86,7 @@ unlocking mechanisms, therefore the protocol needs to be adapted. The structure 
 3. [Transaction Payload changes compared to Chrysalis Part 2](#transaction-payload-changes)
 4. [New concepts of output design](#new-concepts)
     - [Native tokens](#native-tokens-in-outputs)
+    - [Limited Addresses](#limited-addresses)
     - [Unlock Conditions](#unlock-conditions)
     - [Features](#features)
     - [Chain constraint](#chain-constraint-in-utxo)
@@ -260,6 +261,48 @@ Outputs must have the following fields to define the balance of native tokens th
   - **output side of the transaction:** the foundry outputs controlling outstanding native token balances must be present in the transaction. The validation of the foundry output(s) determines if the minting operations are valid.
   - **input side of the transaction:** the transaction destroys tokens. The presence and validation of the foundry outputs of the native tokens determines whether the tokens are burned (removed from the ledger) or melted in the foundry.
 
+### Limited addresses
+
+It is possible to limit the use of an _Ed25519 Address_. For these limited addresses, the first three bits of the _Address Type_ define its capabilities using bitflags:
+- If the bit with the value `0x01` is set, the address can only be used for "simple transactions" without additional conditions.
+- If the bit with the value `0x02` is set, only IOTA coins can be sent to this address.
+- The bit with value `0x04` is currently reserved and must always be zero.
+
+The `Address Type` of `0` remains unchanged and represents a regular _Ed25519 Address_ without any limitations.
+
+It is important to note that these limitations are only enforced by the _Address Type_. Therefore, it is theoretically possible to use the same Ed25519 private key for both limited and regular addresses.
+
+<details open>
+    <summary>Ed25519 Address</summary>
+    <table>
+        <tr>
+            <td><b>Name</b></td>
+            <td><b>Type</b></td>
+            <td><b>Description</b></td>
+        </tr>
+        <tr>
+            <td>Address Type</td>
+            <td>uint8</td>
+            <td>
+                Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
+            </td>
+        </tr>
+        <tr>
+            <td>PubKeyHash</td>
+            <td>ByteArray[32]</td>
+            <td>The raw bytes of the Ed25519 address which is a BLAKE2b-256 hash of the Ed25519 public key.</td>
+        </tr>
+    </table>
+</details>
+
+#### Additional syntactic output validation rules:
+
+- If the `Address Type` has the bit with value `0x01` set:
+  - `Output Type` must be `3` (_Basic Output_) and
+  - `Unlock Conditions Count` must be `1` (exactly one _Address Unlock Condition_).
+- If the `Address Type` has the bit with value `0x02` set:
+  - `Native Tokens Count` must be `0`.
+
 ### New Functionalities in Outputs
 
 The programmability of outputs opens the door for implementing new functionalities for the base protocol. While some outputs
@@ -290,6 +333,7 @@ Transaction validation rules are detailed in [TIP-20](../TIP-0020/tip-0020.md).
 
 New additions are the <i>Alias Address</i> and <i>NFT Address</i> types, which have to be unlocked with their
 corresponding unlocks, as defined in [Unlocking Chain Script Locked Outputs](#unlocking-chain-script-locked-outputs).
+
 
 <details>
     <summary>Address Unlock</summary>
@@ -327,7 +371,7 @@ corresponding unlocks, as defined in [Unlocking Chain Script Locked Outputs](#un
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -465,7 +509,7 @@ This unlock condition is employed to achieve conditional sending. An output that
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -654,7 +698,7 @@ is allowed to unlock the output containing the <i>Expiration Unlock Condition</i
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -761,7 +805,7 @@ machine that can only be carried out by the `State Controller Address`, hence th
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -863,7 +907,7 @@ machine that can only be carried out by the `Governor Address`, hence the distin
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -1045,7 +1089,7 @@ transaction validation.
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -1160,7 +1204,7 @@ disclose their addresses to prove the authenticity of the NFT once it is in circ
                         <td>Address Type</td>
                         <td>uint8</td>
                         <td>
-                            Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                            Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                         </td>
                     </tr>
                     <tr>
@@ -1459,7 +1503,7 @@ is deprecated with the replacement of the [TIP-20 Transaction Payload](../TIP-00
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -1550,7 +1594,7 @@ is deprecated with the replacement of the [TIP-20 Transaction Payload](../TIP-00
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -1676,7 +1720,7 @@ is deprecated with the replacement of the [TIP-20 Transaction Payload](../TIP-00
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -1784,7 +1828,7 @@ is deprecated with the replacement of the [TIP-20 Transaction Payload](../TIP-00
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -2064,7 +2108,7 @@ state as metadata into the UTXO ledger.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -2152,7 +2196,7 @@ state as metadata into the UTXO ledger.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -2253,7 +2297,7 @@ state as metadata into the UTXO ledger.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -2379,7 +2423,7 @@ state as metadata into the UTXO ledger.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -3028,7 +3072,7 @@ sent as a request to smart contract chain accounts.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -3119,7 +3163,7 @@ sent as a request to smart contract chain accounts.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -3245,7 +3289,7 @@ sent as a request to smart contract chain accounts.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -3353,7 +3397,7 @@ sent as a request to smart contract chain accounts.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -3504,7 +3548,7 @@ sent as a request to smart contract chain accounts.
                                                 <td>Address Type</td>
                                                 <td>uint8</td>
                                                 <td>
-                                                    Set to <strong>value 0</strong> to denote an <i>Ed25519 Address</i>.
+                                                    Set to <strong>value 0, 1, 2 or 3</strong> to denote an <i>Ed25519 Address</i>.
                                                 </td>
                                             </tr>
                                             <tr>
