--- a/tips/TIP-0031/tip-0031.md
+++ b/tips/TIP-0031/tip-0031.md
@@ -44,12 +44,21 @@ Currently, only three kind of addresses are supported:
 
 They are serialized as follows:
 
-| Type    | First byte | Address bytes                                                                  |
-|---------|------------|--------------------------------------------------------------------------------|
-| Ed25519 | `0x00`     | 32 bytes: The BLAKE2b-256 hash of the Ed25519 public key.                      |
-| Alias   | `0x08`     | 32 bytes: The BLAKE2b-256 hash of the <i>Output ID</i> that created the alias. |
-| NFT     | `0x10`     | 32 bytes: The BLAKE2b-256 hash of the <i>Output ID</i> that created the NFT.   |
+| Type    | First byte      | Address bytes                                                                  |
+| ------- | --------------- | ------------------------------------------------------------------------------ |
+| Ed25519 | `0x00` - `0x07` | 32 bytes: The BLAKE2b-256 hash of the Ed25519 public key.                      |
+| Alias   | `0x08`          | 32 bytes: The BLAKE2b-256 hash of the <i>Output ID</i> that created the alias. |
+| NFT     | `0x10`          | 32 bytes: The BLAKE2b-256 hash of the <i>Output ID</i> that created the NFT.   |
 
+### Ed25519 Address capabilities
+
+The first three bits of an _Ed25519 Address_ define its capabilities using bitflags:
+- The bit with value `0x01`: if set, the address can only be used for "simple transactions" without extra conditions:
+  - it cannot be part of an unlock condition other than an _Address Unlock Condition_ and
+  - its containing output must have only this single _Address Unlock Condition_.
+- The bit with value `0x02`: if set, only IOTA coins can be sent to this address:
+  - any output that has such an address in any of its unlock conditions, must have _Native Tokens Count_ set to zero.
+- The bit with value `0x04`: reserved and must always be zero
 
 ## Bech32 for human-readable encoding
 
